bridge/base/0-driveandgo-project-namespace.yaml
#! 0-driveandgo-project-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: driveandgo-project
    labels:
        com.docker.compose.project: driveandgo_project
