bridge/base/postgres_db-expose.yaml
#! postgres_db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgres-db
    namespace: driveandgo-project
    labels:
        com.docker.compose.project: driveandgo_project
        com.docker.compose.service: postgres_db
spec:
    selector:
        com.docker.compose.project: driveandgo_project
        com.docker.compose.service: postgres_db
    ports:
        - name: postgres-d-5432
          port: 5432
          targetPort: postgres-d-5432
